--- a/package.json
+++ b/package.json
@@ -2,18 +2,22 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "serve": "vite preview"
+    "build": "tsc && vite build"
   },
   "dependencies": {
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
+    "@linaria/core": "*",
+    "@linaria/react": "*",
+    "@linaria/shaker": "*",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "prettier": "^2.3.1",
     "typescript": "^4.3.2",
-    "vite": "^2.3.7"
+    "vite": "^2.3.7",
+    "vite-plugin-linaria-styled": "^1.0.2"
   }
 }
