--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "NODE_ENV=development concurrently \"npx overmind-devtools \" \"vite\" ",
     "build": "tsc && vite build"
   },
   "dependencies": {
+    "overmind": "^27.0.0",
+    "overmind-react": "^28.0.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
@@ -12,9 +14,11 @@
     "@linaria/core": "*",
     "@linaria/react": "*",
     "@linaria/shaker": "*",
+    "@rollup/plugin-inject": "^4.0.2",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "concurrently": "^6.2.0",
     "prettier": "^2.3.1",
     "typescript": "^4.3.2",
     "vite": "^2.3.7",
