--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,6 @@
 CLIENT_ID=
 CLIENT_SECRET=
 HOST=http://localhost:8888
+APP_HOST=http://localhost:3000
 PORT=8888
 SCOPE=user-read-private user-read-email user-read-playback-state user-read-recently-played user-modify-playback-state
