--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "version": "0.0.0",
   "scripts": {
-    "dev": "NODE_ENV=development concurrently \"npx overmind-devtools \" \"vite\" ",
+    "dev": "NODE_ENV=development concurrently \"npx overmind-devtools \" \"node proxy_server/index.js \" \"vite\" ",
     "build": "tsc && vite build"
   },
   "dependencies": {
@@ -19,7 +19,12 @@
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "concurrently": "^6.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "node-fetch": "^2.6.1",
     "prettier": "^2.3.1",
+    "querystring": "^0.2.1",
     "typescript": "^4.3.2",
     "vite": "^2.3.7",
     "vite-plugin-linaria-styled": "^1.0.2"
