--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "overmind": "^27.0.0",
     "overmind-react": "^28.0.0",
+    "page": "^1.11.6",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
@@ -15,6 +16,7 @@
     "@linaria/react": "*",
     "@linaria/shaker": "*",
     "@rollup/plugin-inject": "^4.0.2",
+    "@types/page": "^1.11.2",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
